--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "stronger100", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
+<script id="_wauzya">var _wau = _wau || []; _wau.push(["dynamic", "stronger100", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Mi GALERI1A AQUI</title>
-<meta content='https://i.postimg.cc/g0nwm7qL/475582776-632807172765472-5491941500500453179-n.jpg' property='og:image'/>
+<title>Discreet service</title>
+<meta content='https://i.postimg.cc/C5bKnWCx/Screenshot-947.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
@@ -20,22 +21,23 @@
 <div class="wrap">
 <div class="step-block">
 <div class="logo">
+<img src="https://i.imgur.com/sZdtUEq.png" alt="">
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-Soy masajista profesional voy a tu domicilio por horas  ¿Quieres ver mi catalogo?.?.</div>
+I have my sexual experience, dancer and erotic masses of men, would you like to see my Catalog?</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
-No
+Yes
 </div>
 <div class="step-btn yes-btn tr-next-button tr-b-option">
-Si
+No
 </div>
 </div>
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-¡Felicidades! Has sido seleccionado para conocer a una chica, para completar una cita debes registrarte en nuestra web, pulsar "ENTRAR", rellena el formulario gratuito y disfruta del sexo vaginal, orgías y mucho más... </div>
+Congratulations! You have been selected to meet a girl, to complete an appointment you must register on our website, press "ENTER", fill out the free form and enjoy vaginal sex, orgies and much more...</div>
 <p>
 <b style="color: red;">
 </b>
@@ -46,7 +48,7 @@ Si
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn-dimi.akamaized.net/landings/284460/1700583168/images/4.mp4" type="video/mp4">
+<source src="https://i.imgur.com/JuVdi4p.mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
